2025-09-16  Zhengyi Fu  <i@fuzy.me>

	Fix +gnus-read-ephemeral-emacs-search-group

	* init.el (+gnus-read-ephemeral-emacs-search-group): Require `mml' and `mm-url'.
	(url-http-response-status): Declare the variable.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	Unify error handling in gptel-tools.el

	* site-lisp/gptel-tools.el (gptel-tools--write-file-async)
	(gptel-tools--insert-async, gptel-tools--grep-async)
	(gptel-tools--url-retrieve, gptel-tools--read-url-async)
	(gptel-tools--search-web-async)
	(gptel-tools--search-jira-issues-async)
	(gptel-tools--get-jira-issue-async): Unify error handling.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	Enable semantic highlighting of Elisp

	* packages.el: New package `semel'.
	* init.el: Enable it.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (with-no-compile!): Add indentation
	declaration.

2025-09-16  Zhengyi Fu  <i@fuzy.me>

	* init.el: Bind "M-g r" to `consult-grep-match'.

2025-09-15  Zhengyi Fu  <i@fuzy.me>

	Pre-build binaries for rime, pdf-tools and telega

	* init.el: Remove auto-build logic for pdf-tools.
	* packages.el: Update recipe for rime, pdf-tools and telega.
	* site-lisp/telega-config.el (telega-server-command): Set to the
	prebuilt telega server to binary.

2025-09-15  Zhengyi Fu  <i@fuzy.me>

	* init.el: Fix nerd-icons support in debview-mode.

2025-09-15  Zhengyi Fu  <i@fuzy.me>

	Add timeout to web-based tools

	* site-lisp/gptel-tools.el (gptel-tools--url-retrieve): Add new
	optional arg `timeout'.
	(gptel-tools--read-url-async, gptel-tools--search-web-async)
	(gptel-tools--search-jira-issues-async)
	(gptel-tools--get-jira-issue-async): Use it.

2025-09-15  Zhengyi Fu  <i@fuzy.me>

	* init.el (message-mail-alias-type): Set to `ecomplete'.

2025-09-15  Zhengyi Fu  <i@fuzy.me>

	Update transient levels

	* transient/levels.el (magit-merge): Add set level of
	--strategy-option to 1.

2025-09-12  Zhengyi Fu  <i@fuzy.me>

	* init.el (+gnus-read-ephemeral-emacs-search-group): New command.
